# Generated by Django 3.2.13 on 2022-05-23 00:17

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("patient", "0001_initial"),
        ("classifiers", "0001_initial"),
    ]

    operations = [
        migrations.CreateModel(
            name="TNM",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "tumor",
                    models.CharField(
                        blank=True,
                        choices=[
                            ("TXTX", "Tx"),
                            ("T0", "T0"),
                            ("Tis", "Tis"),
                            ("T1", "T1"),
                            ("T2", "T2"),
                            ("T3", "T3"),
                            ("T4", "T4"),
                        ],
                        max_length=10,
                        verbose_name="Tumor",
                    ),
                ),
                (
                    "nodule",
                    models.CharField(
                        blank=True,
                        choices=[
                            ("NX", "NX"),
                            ("N0", "N0"),
                            ("N1", "N1"),
                            ("N2", "N2"),
                            ("N3", "N3"),
                        ],
                        max_length=10,
                        verbose_name="Nódulo",
                    ),
                ),
                (
                    "metastasis",
                    models.CharField(
                        blank=True,
                        choices=[("MX", "MX"), ("M0", "M0"), ("M1", "M1")],
                        max_length=10,
                        verbose_name="Metástasis",
                    ),
                ),
                (
                    "is_clinical",
                    models.BooleanField(
                        blank=True, default=False, verbose_name="Clínico"
                    ),
                ),
                (
                    "is_pathological",
                    models.BooleanField(
                        blank=True, default=False, verbose_name="Patológico"
                    ),
                ),
                (
                    "is_recurrent",
                    models.BooleanField(
                        blank=True, default=False, verbose_name="Recurrente"
                    ),
                ),
                (
                    "is_posttreatment",
                    models.BooleanField(
                        blank=True, default=False, verbose_name="Post-tratamiento"
                    ),
                ),
                (
                    "is_autopsy",
                    models.BooleanField(
                        blank=True, default=False, verbose_name="Autopsia"
                    ),
                ),
                (
                    "patient",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="patient.patient",
                        verbose_name="Paciente",
                    ),
                ),
            ],
            options={
                "verbose_name": "TNM",
                "verbose_name_plural": "TNMs",
                "ordering": ["pk"],
            },
        ),
        migrations.CreateModel(
            name="Neoplasm",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "date_of_diagnosis",
                    models.DateField(blank=True, verbose_name="Fecha de diagnóstico"),
                ),
                (
                    "laterality",
                    models.IntegerField(
                        blank=True,
                        choices=[(1, "No"), (2, "Derecho"), (3, "Izquierdo")],
                        verbose_name="Lateralidad",
                    ),
                ),
                (
                    "diagnostic_confirmation",
                    models.IntegerField(
                        choices=[
                            (1, "Clínica"),
                            (2, "Investigación Clínica"),
                            (4, "Marcadores Tumorales"),
                            (5, "Citología"),
                            (6, "Histología de una metástasis"),
                            (7, "Histología del tumor primario"),
                            (9, "Desconocido"),
                        ],
                        verbose_name="Confirmación del Diagnóstico",
                    ),
                ),
                (
                    "differentiation_grade",
                    models.SmallIntegerField(
                        blank=True,
                        choices=[
                            (1, "Diferenciado"),
                            (2, "Moderadamente diferenciado"),
                            (3, "Poco diferenciado"),
                            (4, "Indiferenciado"),
                            (5, "Células T"),
                            (6, "Células B"),
                            (7, "Células nulas"),
                            (8, "Células NK"),
                            (9, "No determinado"),
                        ],
                        verbose_name="Grado de diferenciación",
                    ),
                ),
                (
                    "clinical_extension",
                    models.SmallIntegerField(
                        blank=True,
                        choices=[
                            (1, "In situ"),
                            (2, "Localizada"),
                            (3, "Extesión Directa"),
                            (4, "Linfática Regional"),
                            (5, "Extensión Directa y Linfática Regional"),
                            (6, "Metástasis remota"),
                            (7, "No aplicable"),
                            (8, "Desconocido"),
                        ],
                        verbose_name="Extensión clínica",
                    ),
                ),
                (
                    "clinical_stage",
                    models.SmallIntegerField(
                        choices=[
                            (0, "In Situ"),
                            (1, "I"),
                            (2, "Ia"),
                            (3, "Ib"),
                            (4, "Ic"),
                            (5, "II"),
                            (6, "IIa"),
                            (7, "IIb"),
                            (8, "IIc"),
                            (9, "III"),
                            (10, "IIIa"),
                            (11, "IIIb"),
                            (12, "IIIc"),
                            (13, "IV"),
                            (14, "IVa"),
                            (15, "IVb"),
                            (16, "IVc"),
                            (17, "Desconocido"),
                            (18, "No Aplicable"),
                        ],
                        verbose_name="Etapa clínica",
                    ),
                ),
                (
                    "is_pregnant",
                    models.BooleanField(default=False, verbose_name="¿Embarazada?"),
                ),
                (
                    "trimester",
                    models.IntegerField(
                        blank=True, null=True, verbose_name="Trimestre"
                    ),
                ),
                (
                    "is_vih",
                    models.BooleanField(default=False, verbose_name="¿Es VIH+?"),
                ),
                (
                    "source_of_info",
                    models.IntegerField(
                        blank=True,
                        choices=[
                            (1, "Anatomía patológica"),
                            (2, "Hematología"),
                            (3, "Egreso hospitalario"),
                            (4, "Registro de fallecidos"),
                        ],
                        verbose_name="Fuente de información",
                    ),
                ),
                (
                    "date_of_report",
                    models.DateField(blank=True, verbose_name="Fecha del reporte"),
                ),
                (
                    "medic_that_report",
                    models.CharField(
                        blank=True, max_length=128, verbose_name="Médico que reporta"
                    ),
                ),
                (
                    "treatment_performed",
                    models.IntegerField(
                        blank=True,
                        choices=[
                            (1, "Cirugía"),
                            (2, "Quimioterapia"),
                            (3, "Radioterapia"),
                            (4, "Hormonoterapia"),
                            (0, "Ninguno"),
                        ],
                        null=True,
                        verbose_name="Tratamiento realizado",
                    ),
                ),
                (
                    "histologic_type",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.CASCADE,
                        to="classifiers.morphology",
                        verbose_name="Tipo histológico",
                    ),
                ),
                (
                    "patient",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="patient.patient",
                        verbose_name="Paciente",
                    ),
                ),
                (
                    "primary_site",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.CASCADE,
                        to="classifiers.topography",
                        verbose_name="Sitio primario",
                    ),
                ),
            ],
            options={
                "verbose_name": "Neoplasia",
                "verbose_name_plural": "Neoplasias",
                "ordering": ["pk"],
            },
        ),
    ]
