# Generated by Django 3.2.13 on 2022-05-23 00:17

import django.core.validators
import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("geographic_location", "0001_initial"),
    ]

    operations = [
        migrations.CreateModel(
            name="Patient",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                (
                    "identity_card",
                    models.CharField(
                        max_length=11,
                        validators=[django.core.validators.MinLengthValidator(11)],
                        verbose_name="Carnet de Identidad",
                    ),
                ),
                ("first_name", models.CharField(max_length=128, verbose_name="Nombre")),
                (
                    "last_name",
                    models.CharField(max_length=255, verbose_name="Apellidos"),
                ),
                ("address", models.TextField(verbose_name="Dirección Actual")),
                (
                    "race",
                    models.IntegerField(
                        choices=[
                            (0, "No Definido"),
                            (1, "Blanca"),
                            (2, "Negra"),
                            (3, "Mestizo"),
                            (4, "Amarillo"),
                        ],
                        default=0,
                        verbose_name="Raza",
                    ),
                ),
                (
                    "medical_record",
                    models.CharField(
                        max_length=32, verbose_name="No. Historia Clínica"
                    ),
                ),
                (
                    "age_at_diagnosis",
                    models.PositiveSmallIntegerField(
                        blank=True,
                        null=True,
                        verbose_name="Edad al momento del diagnóstico",
                    ),
                ),
                ("is_oncologic", models.BooleanField(default=False)),
                (
                    "born_municipality",
                    models.ForeignKey(
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="born_municipality",
                        to="geographic_location.municipality",
                        verbose_name="Municipio natal",
                    ),
                ),
                (
                    "residence_municipality",
                    models.ForeignKey(
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="residence_municipality",
                        to="geographic_location.municipality",
                        verbose_name="Municipio de residencia",
                    ),
                ),
            ],
            options={
                "verbose_name": "Paciente",
                "verbose_name_plural": "pacientes",
                "ordering": ["updated_at"],
            },
        ),
        migrations.AddConstraint(
            model_name="patient",
            constraint=models.UniqueConstraint(
                fields=("identity_card", "medical_record"),
                name="patient_medical_record_identity_card_constraints",
            ),
        ),
    ]
