@startuml
package "apps.drugs" {
 class Drug {
 id BigAutoField
 name CharField
 type IntegerField
 }
 }
 package "apps.classifiers" {
 class Morphology {
 id BigAutoField
 code CharField
 description CharField
 }
 class RadioIsotope {
 id BigAutoField
 name CharField
 }
 class Study {
 id BigAutoField
 name CharField
 }
 class Topography {
 id BigAutoField
 code CharField
 description CharField
 }
 }
 package "apps.geographic_location" {
 class Municipality {
 id BigAutoField
 province ForeignKey
 name CharField
 }
 class Province {
 municipality ManyToOneRel
 id BigAutoField
 name CharField
 }
 }
 package "apps.patient" {
 class Patient {
 id BigAutoField
 created_at DateTimeField
 updated_at DateTimeField
 identity_card CharField
 first_name CharField
 last_name CharField
 address TextField
 race IntegerField
 medical_record CharField
 residence_municipality ForeignKey
 born_municipality ForeignKey
 age_at_diagnosis PositiveSmallIntegerField
 is_oncologic BooleanField
 }
 }
 package "apps.cancer_registry" {
 class Neoplasm {
 id BigAutoField
 patient ForeignKey
 date_of_diagnosis DateField
 primary_site ForeignKey
 laterality IntegerField
 diagnostic_confirmation IntegerField
 histologic_type ForeignKey
 differentiation_grade SmallIntegerField
 clinical_extension SmallIntegerField
 clinical_stage SmallIntegerField
 is_pregnant BooleanField
 trimester IntegerField
 is_vih BooleanField
 source_of_info IntegerField
 date_of_report DateField
 medic_that_report CharField
 treatment_performed IntegerField
 }
 class TNM {
 id BigAutoField
 patient ForeignKey
 tumor CharField
 nodule CharField
 metastasis CharField
 is_clinical BooleanField
 is_pathological BooleanField
 is_recurrent BooleanField
 is_posttreatment BooleanField
 is_autopsy BooleanField
 }
 }
 package "apps.nuclear_medicine" {
 class Gammagraphy {
 id BigAutoField
 created_at DateTimeField
 updated_at DateTimeField
 patient ForeignKey
 drug ForeignKey
 radio_isotope ForeignKey
 dose FloatField
 report TextField
 observation TextField
 requested_study ManyToManyField
 }
 class HormonalResult {
 id BigAutoField
 created_at DateTimeField
 updated_at DateTimeField
 hormonal_study OneToOneField
 tsh FloatField
 t3 FloatField
 t4 FloatField
 t3f FloatField
 t4f FloatField
 prl FloatField
 fsh FloatField
 lh FloatField
 prg FloatField
 e2 FloatField
 cort FloatField
 ins FloatField
 test FloatField
 gh FloatField
 }
 class HormonalStudy {
 id BigAutoField
 created_at DateTimeField
 updated_at DateTimeField
 patient ForeignKey
 sample_number AutoField
 tests MultiSelectField
 }
 class IodineDetection {
 id BigAutoField
 created_at DateTimeField
 updated_at DateTimeField
 patient ForeignKey
 two_hours FloatField
 twenty_four_hours FloatField
 }
 class OncologicResult {
 id BigAutoField
 created_at DateTimeField
 updated_at DateTimeField
 oncologic_study OneToOneField
 tsh FloatField
 t3 FloatField
 t4 FloatField
 tg FloatField
 anti_tg FloatField
 anti_tipo FloatField
 calcit FloatField
 ca19_9 FloatField
 ca15_3 FloatField
 ca125 FloatField
 cea FloatField
 alf FloatField
 psa FloatField
 psafree FloatField
 }
 class OncologicStudy {
 id BigAutoField
 created_at DateTimeField
 updated_at DateTimeField
 patient ForeignKey
 sample_number AutoField
 tests MultiSelectField
 }
 class SerialIodineDetection {
 id BigAutoField
 created_at DateTimeField
 updated_at DateTimeField
 patient ForeignKey
 two_hours FloatField
 four_hours FloatField
 eight_hours FloatField
 twenty_four_hours FloatField
 forty_eight_hours FloatField
 seventy_two_hours FloatField
 ninety_six_hours FloatField
 }
 }

package "apps.chemotherapy" {
 class Protocol {
  id BigAutoField
  created_at DateTimeField
  updated_at DateTimeField
  current_weight FloatField
  current_size FloatField
  current_body_surface FloatField
  cycles IntegerField
  stoped BooleanField
  professional_register CharField
 }
 class ChemotherapyCycle{
  id BigAutoField
  created_at DateTimeField
  updated_at DateTimeField
  drug ForeignKey
  prescribed_dose FloatField
  dose FloatField
  days CharField
  route_of_administration CharField
 }
}

Province *--+ Municipality

Municipality *--+ Patient

Patient *--+ Neoplasm
Patient *--+ TNM
Patient *--+ OncologicStudy
Patient *--+ HormonalStudy
Patient *--+ Gammagraphy
Patient *--+ IodineDetection
Patient *--+ SerialIodineDetection

OncologicStudy *--* OncologicResult
HormonalStudy *--* HormonalResult

Drug *--+ Gammagraphy
RadioIsotope *--+ Gammagraphy

Gammagraphy +--+ Study

Neoplasm +--* Topography
Neoplasm +--* Morphology

Patient *--+ Protocol
Protocol *--+ ChemotherapyCycle
ChemotherapyCycle *--+ Drug

@enduml
